--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
           </li>
         </ul>
       </div>
+      <section class="hero-section">
+        <div class="hero">
+          <img class = "diagonal" src="src/assets/section-bio-bg-diagonal.png" alt="">
+          <div class="divider"></div>
+        </div>
+        
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
