--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
           <div class="divider"></div>
         </div>
       </section>
+      <section class="content">
+          
+          <div class="img-text">
+            <img class="left" src="src/assets/RihannaBabyPic.jpg">
+            <div class="text right">
+              <p>it’s hard to believe that rihanna is only 37 years old. yet within the 10 years since the start of her musical career, she’s become the youngest solo artist to score 14 no. 1 singles on the billboard hot 100—the fastest to do so—she’s sold more than 54 million albums and 210 million tracks worldwide.
+              </p>
+
+              <p>rihanna is the “best selling digital artist of all time… with more than 100 million [riaa] gold & platinum song certifications” and an eight-time grammy award winner who also counts 14 billboard music awards among other countless music accolades.
+              </p>
+
+              <p>aside from her musical achievements, rihanna is bona fide business woman with multiple entrepreneurial ventures. however, most importantly, her undeniable cultural influence has forever imprinted her in history as a global icon despite her young age.
+              </p>
+            </div>
+          </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
