--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         </div>
       </section>
       <section class="content">
-          
           <div class="img-text">
             <img class="left" src="src/assets/RihannaBabyPic.jpg">
             <div class="text right">
@@ -66,6 +65,11 @@
               </p>
             </div>
           </div>
+      </section>
+      <section class="content">
+        <div class="full-img" id="music-of-the-sun">
+          <p class="text-overlap">it all began with an impromptu performance for vacationing new york city music producers evan rogers and carl sturken in 2003 which helped jumpstart 15-year-old rihanna’s multi faceted career. def jam released rihanna's dynamic debut album, music of the sun, which garnered much attention due to the popularity of her highly addictive dancehall-flavored first single. its popularity was propelled by the highly addictive dancehall-flavored lead single, “pon de replay.” a year later, rihanna delivered the platinum-selling sophomore set, a girl like me, featuring the no. 1 singles “sos” and “unfaithful.”</p>
+        </div>
       </section>
     </main>
     <script type="module" src="/src/main.js"></script>
