--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
       </div>
-      <section class="hero-section">
+      <section class="hero-section appear">
         <div class="hero">          
           <img class = "diagonal" src="src/assets/section-bio-bg-diagonal.png" alt="">
           <div class="divider"></div>
