--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
           <p class="text-overlap">it all began with an impromptu performance for vacationing new york city music producers evan rogers and carl sturken in 2003 which helped jumpstart 15-year-old rihanna’s multi faceted career. def jam released rihanna's dynamic debut album, music of the sun, which garnered much attention due to the popularity of her highly addictive dancehall-flavored first single. its popularity was propelled by the highly addictive dancehall-flavored lead single, “pon de replay.” a year later, rihanna delivered the platinum-selling sophomore set, a girl like me, featuring the no. 1 singles “sos” and “unfaithful.”</p>
         </div>
       </section>
+      <section class="content yellow-gradient flex-center">
+        <p class="text-lg">“robyn rihanna fenty began honing her throaty, arresting vocals at an early age.”</p>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
