--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
       <section class="content yellow-gradient flex-center">
         <p class="text-lg">“robyn rihanna fenty began honing her throaty, arresting vocals at an early age.”</p>
       </section>
+      <section class="content smaller">
+        <div class="img-text split">
+          <img class="left" src="src/assets/section-bio-photo-005.jpg" >
+          <div class="text right">
+            <p>born in the barbados parish of saint michael in 1988, robyn rihanna fenty began honing her throaty, arresting vocals at an early age, influenced by such iconic talents as madonna, bob marley, janet jackson and mariah carey.</p>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
