--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
       </section>
       <section class="content">
-        <div class="full-img" id="music-of-the-sun">
+        <div class="full-img position" id="music-of-the-sun">
           <p class="text-overlap">it all began with an impromptu performance for vacationing new york city music producers evan rogers and carl sturken in 2003 which helped jumpstart 15-year-old rihanna’s multi faceted career. def jam released rihanna's dynamic debut album, music of the sun, which garnered much attention due to the popularity of her highly addictive dancehall-flavored first single. its popularity was propelled by the highly addictive dancehall-flavored lead single, “pon de replay.” a year later, rihanna delivered the platinum-selling sophomore set, a girl like me, featuring the no. 1 singles “sos” and “unfaithful.”</p>
         </div>
       </section>
@@ -78,8 +78,13 @@
         <div class="img-text split">
           <img class="left" src="src/assets/section-bio-photo-005.jpg" >
           <div class="text right">
-            <p>born in the barbados parish of saint michael in 1988, robyn rihanna fenty began honing her throaty, arresting vocals at an early age, influenced by such iconic talents as madonna, bob marley, janet jackson and mariah carey.</p>
+            <p class="larger">born in the barbados parish of saint michael in 1988, robyn rihanna fenty began honing her throaty, arresting vocals at an early age, influenced by such iconic talents as madonna, bob marley, janet jackson and mariah carey.</p>
           </div>
+        </div>
+      </section>
+      <section class="content smaller">
+        <div class="full-img scale" id="bio-006">
+          <p class="text-overlap large up self-align-end">but it was 2007’s good girl gone bad that catapulted rihanna into icon status.</p>
         </div>
       </section>
     </main>
