--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
           <p class="text-overlap large up self-align-end">but it was 2007’s good girl gone bad that catapulted rihanna into icon status.</p>
         </div>
       </section>
+      <section class="content smaller">
+        <div class="img-text split">          
+          <div class="text left">
+            <p>moving away from her caribbean music roots, the singer displayed her knack for reinvention by shifting to more up tempo dance tracks. leading the charge was the album’s first single, “umbrella.” the track became the undisputed no. 1 pop song of the summer, dominating the u.s. pop, urban and crossover billboard charts for 52 weeks in a row. "umbrella" earned rihanna her first grammy in 2008 for best rap/sung collaboration.</p>
+          </div>
+          <img class="right" src="src/assets/2008-Grammy.jpg">
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
