--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
       </section>
-      <section class="content smaller">
+      <section class="content">
         <div class="full-img scale" id="bio-006">
           <p class="text-overlap large up self-align-end">but it was 2007’s good girl gone bad that catapulted rihanna into icon status.</p>
         </div>
@@ -90,9 +90,18 @@
       <section class="content smaller">
         <div class="img-text split">          
           <div class="text left">
-            <p>moving away from her caribbean music roots, the singer displayed her knack for reinvention by shifting to more up tempo dance tracks. leading the charge was the album’s first single, “umbrella.” the track became the undisputed no. 1 pop song of the summer, dominating the u.s. pop, urban and crossover billboard charts for 52 weeks in a row. "umbrella" earned rihanna her first grammy in 2008 for best rap/sung collaboration.</p>
+            <p class="align-left">moving away from her caribbean music roots, the singer displayed her knack for reinvention by shifting to more up tempo dance tracks. leading the charge was the album’s first single, “umbrella.” the track became the undisputed no. 1 pop song of the summer, dominating the u.s. pop, urban and crossover billboard charts for 52 weeks in a row. "umbrella" earned rihanna her first grammy in 2008 for best rap/sung collaboration.</p>
           </div>
           <img class="right" src="src/assets/2008-Grammy.jpg">
+        </div>
+      </section>
+      <section class="content smaller">
+        <div class="img-text split">
+          <img class="up" src="src/assets/section-bio-photo-008.jpg">
+          <div class="text down">          
+            <p class="align-left">"umbrella" was also the no. 1 single on the u.k. singles chart for 11 consecutive weeks and went on to win numerous awards. that momentum carried over to rihanna’s next album, the emotionally riveting rated r. the 2009 set’s first single, “russian roulette,” notched chart history as rihanna’s 12th billboard hot 100 hit—placing her second among female hot 100 artists in the decade since 2000.</p>
+          </div>
+
         </div>
       </section>
     </main>
