correcao animacoes up/down

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </section>
       <section class="content">
         <div class="full-img scale" id="bio-006">
-          <p class="text-overlap large up self-align-end">but it was 2007’s good girl gone bad that catapulted rihanna into icon status.</p>
+          <p class="text-overlap large self-align-end" id="overlap-up">but it was 2007’s good girl gone bad that catapulted rihanna into icon status.</p>
         </div>
       </section>
       <section class="content smaller">
