secao we found love

--- a/index.html
+++ b/index.html
@@ -95,13 +95,21 @@
           <img class="right" src="src/assets/2008-Grammy.jpg">
         </div>
       </section>
-      <section class="content smaller">
+      <section class="content smaller yellow-gradient">
         <div class="img-text split">
           <img class="up" src="src/assets/section-bio-photo-008.jpg">
           <div class="text down">          
             <p class="align-left">"umbrella" was also the no. 1 single on the u.k. singles chart for 11 consecutive weeks and went on to win numerous awards. that momentum carried over to rihanna’s next album, the emotionally riveting rated r. the 2009 set’s first single, “russian roulette,” notched chart history as rihanna’s 12th billboard hot 100 hit—placing her second among female hot 100 artists in the decade since 2000.</p>
           </div>
-
+        </div>
+      </section>
+      <section class="content smaller">
+        <div class="img-text split">
+          <img class="left" src="src/assets/section-bio-photo-009.jpg">
+          <div class="text right">
+            <p class="align-left">from there, rihanna released a new top-selling album each year. with 2010’s loud, rihanna became the youngest artist to achieve ten number one singles when “s&m” reached number one on the billboard hot 100. in 2011, talk that talk spawned the global hit “we found love” which garnered her second mtv video music award for video of the year and her sixth grammy award for best short form music video.
+            </p>
+          </div>
         </div>
       </section>
     </main>
