secao we found love

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
           </div>
         </div>
       </section>
+      <section class="content tiny">
+        <div class="img-text split images">
+          <img src="src/assets/wefoundlove412.jpg" class="down">
+          <img src="src/assets/section-bio-photo-011.jpg" class="up">
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
