--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <main>
-      <div class="sidebar">
+  <body>      
+    <nav class="sidebar">
         <ul class="sidebar-inside">
           <li class="main-item">RIHANNA</li>
           <li>Now</li>
@@ -44,7 +43,9 @@
             </svg>
           </li>
         </ul>
-      </div>
+      </nav>
+    <main>
+
       <section class="hero-section appear">
         <div class="hero">          
           <img class = "diagonal" src="src/assets/section-bio-bg-diagonal.png" alt="">
@@ -116,6 +117,14 @@
         <div class="img-text split images">
           <img src="src/assets/wefoundlove412.jpg" class="down">
           <img src="src/assets/section-bio-photo-011.jpg" class="up">
+        </div>
+      </section>
+      <section class="content">
+        <div class="img-text split">
+          <img src="src/assets/allcdcovers_rihanna_talk_that_talk_2011_retail_cd-front-640x640.jpg" class="left">
+          <div class="text right">
+            <p class="align-left">rihanna embarked on the 777 tour in nov. 2012 where she performed in 7 countries in 7 days leading up to the release of her 7th studio album unapologetic. the album was the singer’s first no. 1 on the billboard 200. that same year found the singer making her acting debut in the theatrical film “battleship.” most recently, rihanna voiced her first animated character, tip, in the dreamworks' film "home." in addition to providing three singles to the film's soundtrack, rihanna curated the entire compilation.</p>
+          </div>
         </div>
       </section>
     </main>
