--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           </li>
         </ul>
       </nav>
-    <main>
+    <main class="appear">
 
-      <section class="hero-section appear">
+      <section class="hero-section">
         <div class="hero">          
           <img class = "diagonal" src="src/assets/section-bio-bg-diagonal.png" alt="">
           <div class="divider"></div>
@@ -125,6 +125,12 @@
           <div class="text right">
             <p class="align-left">rihanna embarked on the 777 tour in nov. 2012 where she performed in 7 countries in 7 days leading up to the release of her 7th studio album unapologetic. the album was the singer’s first no. 1 on the billboard 200. that same year found the singer making her acting debut in the theatrical film “battleship.” most recently, rihanna voiced her first animated character, tip, in the dreamworks' film "home." in addition to providing three singles to the film's soundtrack, rihanna curated the entire compilation.</p>
           </div>
+        </div>
+      </section>
+      <section class="content smaller">
+        <div class="img-text split images">
+          <img src="src/assets/RihannaUnapologeticCover-640x640.jpg" class="left">
+          <img src="src/assets/Vogue-Magazines-Press-Image-1024x683.jpg" class="right">
         </div>
       </section>
     </main>
