secao world tours

--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
           <img src="src/assets/Vogue-Magazines-Press-Image-1024x683.jpg" class="right">
         </div>
       </section>
+      <section class="content tiny">
+        <div class="img-text split">
+          <img src="src/assets/RihannaLive-640x4261-640x426.jpg" class="down">
+          <div class="text up">
+            <p class="align-left">in addition, rihanna is an unstoppable force on the worldwide touring front, she is the first female solo artist to sell out 10 concerts at london’s o2 arena. her world tours, including the diamonds world tour that wrapped in 2013, have taken the icon to more than 100 countries each time, selling out arenas and stadiums. in 2014, rihanna was honored with the first ever icon award at the america music awards. rihanna's mother monica braithwaite presented her with the award in a heartwarming on-screen moment.</p>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
