--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
           </div>
         </div>
       </section>
+      <section class="content tiny">
+        <div class="img-text split">
+          <div class="text up">
+            <p class="align-left">rihanna’s creative muse has also triggered various entrepreneurial and philanthropic pursuits. her innate sense of style—from cutting-edge hairstyles to immaculate fashion foresight—has earned her over 70 magazine covers. she was named the face of french fashion house balmain’s spring/summer 2014 campaign and received the prestigious fashion icon award from the 2014 council of fashion designers.</p>
+          </div>
+          <img src="src/assets/2014-CFDA-5651x3768-640x427.jpg" class="down">
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
