secao styled to rock

--- a/index.html
+++ b/index.html
@@ -141,12 +141,20 @@
           </div>
         </div>
       </section>
-      <section class="content tiny">
+      <section class="content tiny yellow-gradient">
         <div class="img-text split">
           <div class="text up">
             <p class="align-left">rihanna’s creative muse has also triggered various entrepreneurial and philanthropic pursuits. her innate sense of style—from cutting-edge hairstyles to immaculate fashion foresight—has earned her over 70 magazine covers. she was named the face of french fashion house balmain’s spring/summer 2014 campaign and received the prestigious fashion icon award from the 2014 council of fashion designers.</p>
           </div>
           <img src="src/assets/2014-CFDA-5651x3768-640x427.jpg" class="down">
+        </div>
+      </section>
+      <section class="content smaller">
+        <div class="img-text split">
+          <div class="text down">
+            <p class="align-left">in addition to designing collections for armani and british fashion brand river island, rihanna developed and executive-produced both the u.k. and u.s. versions of the television series “styled to rock.” after a successful creative partnership, mac continued their relationship with rihanna by naming her the face of the 2014 viva glam campaign.</p>
+          </div>
+          <img src="src/assets/section-bio-photo-018.jpg" class="up">
         </div>
       </section>
     </main>
