--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
           <img src="src/assets/section-bio-photo-018.jpg" class="up">
         </div>
       </section>
+      <section class="content smaller">
+        <div class="img-text split">
+          <img src="src/assets/Rihanna-for-MAC-Viva-Glam-640x640.jpg" class="up">
+          <div class="text down">
+            <p class="align-left">all proceeds from the viva glam rihanna ii lipstick/lip gloss campaign will benefit women and children living with and affected by hiv/aids. at the end of 2014, rihanna became puma's global ambassador for women's training and now serves as the creative director, bringing her styling sensibilities and innovation to puma's collections. in march 2015, dior announced that rihanna as the newest face of their brand starring in their secret gardens campaign.</p>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
