--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
           </div>
         </div>
       </section>
+      <section class="content smaller">
+        <div class="full-img position" id="anti">
+          <p class="text-overlap">Rihanna made chart history with her brand new album ANTI, released January 28, 2016, as she achieves her second consecutive #1 album with 166,000 first week sales.</p>
+        </div>
+        
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
