--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
         <div class="full-img position" id="anti">
           <p class="text-overlap">Rihanna made chart history with her brand new album ANTI, released January 28, 2016, as she achieves her second consecutive #1 album with 166,000 first week sales.</p>
         </div>
-        
+      </section>
+      <section class="content tiny">
+        <div class="img-text split">
+          <div class="text up">
+            <p class="align-left">anti’s lead single “work” featuring drake, which hit #1 on itunes in 91 countries less than 36 hours after its release, and was the highest selling digital single of last week, now dominates every urban, rhythmic, and pop radio station in the u.s. “work” has become rihanna’s 27th top 10 hit on billboard’s hot 100, tying her with mariah carey, janet jackson and elton john for the fifth-most top 10s in hot 100 history.</p>
+          </div>
+          <img src="src/assets/Work-Video-Thumbnail-640x360.jpeg" class="down">
+        </div>
       </section>
     </main>
     <script type="module" src="/src/main.js"></script>
