--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
           <img src="src/assets/Work-Video-Thumbnail-640x360.jpeg" class="down">
         </div>
       </section>
+      <section class="content xl">
+        <div class="full-img scale" id="concert"></div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
