secao anti world tour

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </section>
       <section class="content yellow-gradient flex-center">
-        <p class="text-lg">“robyn rihanna fenty began honing her throaty, arresting vocals at an early age.”</p>
+        <p class="text-lg grow">“robyn rihanna fenty began honing her throaty, arresting vocals at an early age.”</p>
       </section>
       <section class="content smaller">
         <div class="img-text split">
@@ -180,6 +180,11 @@
       </section>
       <section class="content xl">
         <div class="full-img scale" id="concert"></div>
+      </section>
+      <section class="content smaller yellow-gradient">
+        <div class="text-lg left">
+          <p class="align-left">rihanna recently kicked off the anti world tour in on march 12 in jacksonville, fl with nearly 40 shows lined up in new york city, los angeles, toronto, chicago, vancouver, washington dc & more. the european leg of the tour will then follow in summer 2016.</p>
+        </div>
       </section>
     </main>
     <script type="module" src="/src/main.js"></script>
