--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </section>
       <section class="content smaller">
         <div class="full-img position" id="anti">
-          <p class="text-overlap">Rihanna made chart history with her brand new album ANTI, released January 28, 2016, as she achieves her second consecutive #1 album with 166,000 first week sales.</p>
+          <p class="text-overlap">rihanna made chart history with her brand new album anti, released january 28, 2016, as she achieves her second consecutive #1 album with 166,000 first week sales.</p>
         </div>
       </section>
       <section class="content tiny">
@@ -184,6 +184,14 @@
       <section class="content smaller yellow-gradient">
         <div class="text-lg left">
           <p class="align-left">rihanna recently kicked off the anti world tour in on march 12 in jacksonville, fl with nearly 40 shows lined up in new york city, los angeles, toronto, chicago, vancouver, washington dc & more. the european leg of the tour will then follow in summer 2016.</p>
+        </div>
+      </section>
+      <section class="content">
+        <div class="img-text split">
+          <img src="src/assets/diamondball-620x5501.jpg" class="up">
+          <div class="text down">
+            <p class="align-left">with over 81 million facebook fans, 57 million twitter & 35 million instagram followers, rihanna is putting her influence to good use via philanthropic efforts. chief among these is her own clara lionel foundation. established in 2012 and named after rihanna’s beloved grandparents clara & lionel braithwaite, the foundation works to improve the quality of life for communities globally in the areas of health, education, arts & culture. in december, rihanna held the 2nd annual diamond ball to benefit the clf.</p>
+          </div>
         </div>
       </section>
     </main>
