--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@
           </div>
         </div>
       </section>
+      <section class="content xl">
+        <div class="img-text split">
+          <div class="text left">
+            <p>despite all of these distinguished achievements, rihanna is just getting started. she is busy adding more credits to her burgeoning resume: executive producer, fashion designer, actress, astute business entrepreneur and philanthropist.</p>
+          </div>
+          <img src="src/assets/ApprovedImage_Rihanna_2016-640x959.jpg" class="right">
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
